--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,17 +54,17 @@ dependencies {
     def junit_version = "4.13.2"
     def ext_junit_version = "1.1.3"
     def espresso_core_version = "3.4.0"
-    def activity_version = "1.5.0"
-    def lifecycle_version = "2.5.0"
+    def activity_version = '1.5.1'
+    def lifecycle_version = '2.5.1'
     def mdc_version = "1.6.1"
-    def nav_version = "2.5.0"
-    def room_version = "2.4.2"
-    def firebase_version = "29.0.3"
+    def nav_version = '2.5.1'
+    def room_version = '2.4.3'
+    def firebase_version = '30.3.2'
     def glide_version = "4.13.2"
     def retrofit_version = "2.9.0"
     def retrofitgson_version = "2.9.0"
-    def okhttplogging_version = "4.10.0"
-    def coroutines_version = "1.6.3"
+    def okhttplogging_version = '5.0.0-alpha.10'
+    def coroutines_version = '1.6.4'
     def play_services_base_version = "18.1.0"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -79,7 +79,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation "com.google.android.material:material:$mdc_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
