--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: "com.google.dagger.hilt.android"
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "ru.netology.nmedia"
         minSdkVersion 22
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -42,11 +43,15 @@ android {
         }
     }
     namespace 'ru.netology.nmedia'
+
+    kapt {
+        correctErrorTypes = true
+    }
 }
 
 dependencies {
-    def core_version = "1.8.0"
-    def appcompat_version = "1.4.2"
+    def core_version = '1.9.0'
+    def appcompat_version = '1.5.1'
     def constraintlayout_version = "2.1.4"
     def swiperefreshlayout_version = "1.1.0"
     def coordinatorlayout_version = "1.2.0"
@@ -54,19 +59,21 @@ dependencies {
     def junit_version = "4.13.2"
     def ext_junit_version = "1.1.3"
     def espresso_core_version = "3.4.0"
-    def activity_version = '1.5.1'
+    def activity_version = '1.6.0'
     def lifecycle_version = '2.5.1'
-    def mdc_version = "1.6.1"
-    def nav_version = '2.5.1'
+    def mdc_version = '1.7.0'
+    def nav_version = '2.5.2'
     def room_version = '2.4.3'
-    def firebase_version = '30.3.2'
-    def glide_version = "4.13.2"
+    def firebase_version = '31.0.1'
+    def glide_version = '4.14.2'
     def retrofit_version = "2.9.0"
     def retrofitgson_version = "2.9.0"
     def okhttplogging_version = '5.0.0-alpha.10'
     def coroutines_version = '1.6.4'
     def play_services_base_version = "18.1.0"
 
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_version"
