--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     def retrofitgson_version = "2.9.0"
     def okhttplogging_version = '5.0.0-alpha.10'
     def coroutines_version = '1.6.4'
+    def paging_version = "3.1.1"
     def play_services_base_version = "18.1.0"
 
     implementation "com.google.dagger:hilt-android:2.44"
@@ -101,6 +102,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "com.google.android.gms:play-services-base:$play_services_base_version"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
